<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Hábilmente</string>
    <string name="action_settings">Settings</string>

    <string-array name="genders_array">
        <item>Hombre</item>
        <item>Mujer</item>
    </string-array>

    <string name="question">PREGUNTA</string>
    <string name="level">NIVEL</string>
    <string name="next_question">SIGUIENTE PREGUNTA</string>
    <string name="finish">FINALIZAR EVALUACIÓN</string>
    <string name="before">PREGUNTA ANTERIOR</string>
    <string name="close_session">CERRAR SESIÓN</string>

    <string name="firstLevelFirstQuestion" formatted="false">ES HORA DE COMER ALGO!! PARA COMER HAY %1$s Y %2$s . QUE TE GUSTARIA ELEGIR PARA COMER?</string>
    <string name="firstLevelSecondQuestion" formatted="false">MUY BIEN, ES HORA DE COMER!! %1$s SOLO PUEDE ELEGIR UNA OPCIÓN PARA COMER. ¿CUÁL PENSÁS QUE VA A ELEGIR? ¿%2$s O %3$s?</string>
    <string name="firstLevelAlertMessage" formatted="false"> %s prefiere %s </string>

    <string name="secondLevelFirstQuestion" formatted="false">%1$s PERDIÓ A SU GATO. HAY POSIBILIDADES QUE SU GATO SE HAYA ESCONDIDO EN %2$s O TAMBIÉN ES POSIBLE QUE HAYA ESCONDIDO EN %3$s. VOS, DONDE PENSÁS QUE PUEDE ESTAR ESCONDIDO EL GATO? EN %2$s O %3$s?</string>
    <string name="secondLevelAlertMessage" formatted="false">ESA ES UNA BUENA IDEA! PERO %S PIENSA QUE EL GATO ESTA EN %s.</string>
    <string name="secondLevelSecondQuestion" formatted="false">¿DÓNDE IRÁ A BUSCAR %S AL GATO? EN %s O EN %s?</string>

    <string name="thirdLevelFirstQuestion" formatted="false">ELLOS SON MARTIN Y JUAN.</string>
    <string name="thirdLevelSecondQuestion">¿QUIEN SABE LO QUE HAY DENTRO DE LA CAJA?</string>

    <string name="fourthLevelFirstQuestion" formatted="false">ELLOS SON LAURA Y ANA</string>
    <string name="fourthLevelSecondQuestion">LAURA DEJÓ UN CEPILLO EN LA CANASTA.</string>
    <string name="fourthLevelThirdQuestion" formatted="false">ANA AGARRA EL CEPILLO DE LA CANASTA, LO METE EN UN VASO Y SE VA.</string>
    <string name="fourthLevelFourthQuestion" formatated="false">LAURA VUELVE Y BUSCA EL CEPILLO. ¿DÓNDE CREE LAURA QUE ESTÁ SU CEPILLO? ¿DÓNDE LO VA A IR A BUSCAR?</string>

    <string name="fifthLevelFirstQuestion" formatted="false">JUANA SIEMPRE SE BURLA DE MARÍA</string>
    <string name="fifthLevelSecondQuestion" formatted="false">MARÍA SE CAYÓ ANDANDO EN SKATE Y SE LASTIMÓ LA PIERNA</string>
    <string name="fifthLevelThirdQuestion" formatted="false">JUANA LE PREGUNTA A MARÍA: ¿TE DOLIÓ?</string>
    <string name="fifthLevelFourthQuestion" formatted="false">MARÍA LE CONTESTA: NO ME DOLIÓ.</string>
    <string name="fifthLevelFifthQuestion" formatted="false">¿POR QUÉ MARÍA DIJO ESO?</string>

    <string name="sixthLevelFirstQuestion" formatted="false">JUAN Y MARÍA VAN A HACER UN PICNIC. JUAN PIENSA QUE VA A SER UN HERMOSO DÍA DE SOL.</string>
    <string name="sixthLevelSecondQuestion" formatted="false">JUAN Y MARÍA PREPARAN UNA CANASTA CON COMIDA ADENTRO.</string>
    <string name="sixthLevelThirdQuestion" formatted="false">LOS CHICOS MIRAN AL CIELO Y VEN NUBES OSCURAS.</string>
    <string name="sixthLevelFourthQuestion" formatted="false">EMPIEZA A LLOVER. LA COMIDA SE MOJA.</string>
    <string name="sixthLevelFifthQuestion" formatted="false">MARÍA DICE: “ES UN HERMOSO DÍA PARA HACER UN PICNIC”.\n¿ES VERDAD LO QUE DICE MARÍA?\n¿POR QUÉ MARÍA DICE: “ES UN HERMOSO DÍA PARA HACER UN PICNIC”?</string>

    <string name="content_description">img</string>
    <string name="no_evaluations">NO SE REGISTRAN EVALUACIONES</string>
    <string name="no_subjects">NO SE REGISTRAN EVALUADOS</string>
    <string name="no_therapist">NO SE REGISTRAN EVALUADORES</string>
    <string name="date">FECHA</string>
    <string name="status">ESTADO</string>
    <string name="quiz_result">RESULTADO DE LA EVALUACIÓN</string>
    <string name="correct">CORRECTO</string>
    <string name="emergent">EMERGENTE</string>
    <string name="no_correct">INCORRECTO</string>
    <string name="no_evaluated">SIN EVALUAR</string>
    <string name="subject">EVALUADO</string>
    <string name="subjects">EVALUADOS</string>
    <string name="therapist">EVALUADOR</string>
    <string name="therapists">EVALUADORES</string>
    <string name="init">INICIAR</string>
    <string name="select_subject">SELECCIONE UN EVALUADO</string>
    <string name="select_therapist">SELECCIONE UN EVALUADOR</string>
    <string name="select_level">SELECCIONE UN NIVEL</string>
    <string name="select_response">SELECCIONE LA RESPUESTA DADA POR EL EVALUADO</string>
    <string name="juan">JUAN</string>
    <string name="martin">MARTIN</string>
    <string name="ana">ANA</string>
    <string name="laura">LAURA</string>
    <string name="canasta">CANASTA</string>
    <string name="vaso">VASO</string>
    <string name="delete_user">DELETE USER</string>
    <string name="delete_user_message">¿ESTÁ SEGURO QUE DESEA EL ELIMINAR EL USUARIO ACTUAL?</string>
    <string name="user_deleted">EL USUARIO FUE ELIMINADO CORRECTAMENTE.</string>
    <string name="add_subject">AGREGAR EVALUADO</string>
    <string name="add_therapist">AGREGAR EVALUADOR</string>
    <string name="edit_subject">EDITAR EVALUADO</string>
    <string name="edit_therapist">EDITAR EVALUADOR</string>
</resources>
