<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_bg">

    <ImageView
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:src="@drawable/belax_logo" />

    <Button
        android:id="@+id/listUsersButton"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/statistics_btn"
        android:onClick="goToUsersStatistics" />


    <Button
        android:id="@+id/addPacient"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignTop="@+id/listUsersButton"
        android:layout_marginLeft="10dp"
        android:layout_toRightOf="@+id/listUsersButton"
        android:background="@drawable/subject_btn"
        android:onClick="goToUserList" />

    <Button
        android:id="@+id/addTherapist"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignTop="@+id/addPacient"
        android:layout_marginLeft="10dp"
        android:layout_toRightOf="@+id/addPacient"
        android:background="@drawable/therapist_btn"
        android:onClick="goToUserList" />

    <ImageView
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/content_description"
        android:src="@drawable/dane_logo" />

    <View
        android:id="@+id/midAlign"
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true"
        android:layout_centerInParent="true"
        android:layout_marginTop="200dp"
        android:background="@android:color/holo_red_light"
        android:visibility="invisible"></View>

    <RelativeLayout
        android:id="@+id/subjectLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/midAlign"
        android:layout_marginRight="70dp"
        android:layout_marginTop="30dp"
        android:layout_toLeftOf="@+id/midAlign">

        <TextView
            android:id="@+id/titleSubjectTextView"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:background="@drawable/text_bg"
            android:gravity="center"
            android:paddingBottom="6dp"
            android:paddingLeft="18dp"
            android:paddingRight="18dp"
            android:paddingTop="6dp"
            android:text="@string/subject"
            android:textColor="@color/orange_text"
            android:textSize="20sp" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="102dp"
            android:layout_height="104dp"
            android:layout_below="@+id/titleSubjectTextView"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:contentDescription="@string/content_description"
            android:src="@drawable/avatar_large_shadow" />

        <com.belatrix.apadea.view.RoundedLargeImageView
            android:id="@+id/subjectLargeAvatar"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_below="@+id/titleSubjectTextView"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:contentDescription="@string/content_description"
            android:src="@drawable/default_avatar" />

        <TextView
            android:id="@+id/subjectNameTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/subjectLargeAvatar"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="8dp"
            android:text=""
            android:textColor="@android:color/white"
            android:textSize="14sp"
            android:textStyle="bold" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/therapistLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/midAlign"
        android:layout_marginLeft="70dp"
        android:layout_marginTop="30dp"
        android:layout_toRightOf="@+id/midAlign">

        <TextView
            android:id="@+id/titleTherapistTextView"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:background="@drawable/text_bg"
            android:gravity="center"
            android:paddingBottom="6dp"
            android:paddingLeft="18dp"
            android:paddingRight="18dp"
            android:paddingTop="6dp"
            android:text="@string/therapist"
            android:textColor="@color/orange_text"
            android:textSize="20sp" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="102dp"
            android:layout_height="104dp"
            android:layout_below="@+id/titleTherapistTextView"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:src="@drawable/avatar_large_shadow" />

        <com.belatrix.apadea.view.RoundedLargeImageView
            android:id="@+id/therapistLargeAvatar"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_below="@+id/titleTherapistTextView"
            android:layout_centerHorizontal="true"
            android:layout_marginRight="4dp"
            android:layout_marginTop="20dp"
            android:contentDescription="@string/content_description"
            android:src="@drawable/default_avatar" />

        <TextView
            android:id="@+id/therapistNameTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/therapistLargeAvatar"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="8dp"
            android:text=""
            android:textColor="@android:color/white"
            android:textSize="14sp"
            android:textStyle="bold" />

    </RelativeLayout>

    <TextView
        android:id="@+id/iniciarTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="155dp"
        android:background="@drawable/login_btn_selector"
        android:gravity="center"
        android:onClick="iniciar"
        android:paddingBottom="8dp"
        android:paddingLeft="18dp"
        android:paddingRight="18dp"
        android:paddingTop="6dp"
        android:text="@string/init"
        android:textColor="@color/green"
        android:textSize="18sp" />

    <RelativeLayout
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="120dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:text="@string/select_subject"
            android:textColor="@color/light_green_text"
            android:textSize="12sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:text="@string/select_therapist"
            android:textColor="@color/light_green_text"
            android:textSize="12sp" />

    </RelativeLayout>

    <View
        android:id="@+id/centerGuide"
        android:layout_width="2dp"
        android:layout_height="100dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />


    <HorizontalScrollView
        android:id="@+id/scrollViewLeft"
        android:layout_width="425dp"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="43dp"
        android:layout_marginRight="10dp"
        android:layout_toLeftOf="@+id/centerGuide"
        android:fillViewport="false"
        android:padding="4dp">

        <LinearLayout
            android:id="@+id/subjectsLinearLayout"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:divider="@drawable/vertical_divider"
            android:dividerPadding="35dp"
            android:orientation="horizontal"
            android:showDividers="middle"></LinearLayout>

    </HorizontalScrollView>

    <ImageView
        android:layout_width="45dp"
        android:layout_height="58dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="40dp"
        android:layout_toLeftOf="@id/centerGuide"
        android:contentDescription="@string/content_description"
        android:src="@drawable/gradient1_right" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="50dp"
        android:layout_height="61dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="38dp"
        android:layout_marginLeft="25dp"
        android:contentDescription="@string/content_description"
        android:src="@drawable/gradient1_left" />

    <HorizontalScrollView
        android:id="@+id/scrollViewRight"
        android:layout_width="425dp"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="43dp"
        android:layout_marginLeft="10dp"
        android:layout_toRightOf="@id/centerGuide"
        android:padding="4dp">

        <LinearLayout
            android:id="@+id/therapistsLinearLayout"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:divider="@drawable/vertical_divider"
            android:dividerPadding="35dp"
            android:orientation="horizontal"
            android:showDividers="middle">

        </LinearLayout>

    </HorizontalScrollView>

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="45dp"
        android:layout_height="58dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="40dp"
        android:layout_toRightOf="@id/centerGuide"
        android:contentDescription="@string/content_description"
        android:src="@drawable/gradient2_left" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="50dp"
        android:layout_height="61dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="38dp"
        android:layout_marginRight="25dp"
        android:contentDescription="@string/content_description"
        android:src="@drawable/gradient2_right" />

</RelativeLayout>